Fix fonts, header layout & button childs alignment

--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body {
     width: 100%;
     height: 100%;
     margin: 0;
-    font-family: 'Liberation Sans';
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 
@@ -28,14 +28,15 @@ header {
     display: none;
 }
 
-header div {
+header > div {
     justify-self: right;
     height: 36px;
     width: 296px;
-    display: flex;
+    display: grid;
     justify-content: right;
     font-size: 12px;
     text-decoration: none;
+    grid-template-columns: auto auto;
 }
 
 header div div {
@@ -77,6 +78,7 @@ header div div {
 
 
 button {
+    display: flex;
     background-color: #0077C5;
     height: 34px;
     min-width: 104px;
@@ -87,12 +89,22 @@ button {
     color: white;
     cursor: pointer;
     align-items: center;
+    justify-content: center;
 }
 
-svg{
+button svg{
     fill: white;
     height: 15px;
-    margin-right: 6px;
+    margin-right: 5px;
+}
+
+button p{
+    margin: 0;
+    font-size: 14px;
+}
+
+form button p{
+    font-size: 15.75px;
 }
 
 
@@ -150,7 +162,7 @@ main section{
 }
 
 #already{
-    display: none;
+    display: inline;
 }
 
 /* form */
@@ -257,7 +269,6 @@ footer {
     margin: 0 30px;
     padding: 20px 0;
     text-align: center;
-    font-family: 'Dejavu Sans';
     font-size: 12px;
     line-height: 1.5;
 
@@ -291,6 +302,6 @@ footer a {
     }
 
     #already{
-        display: inline;
+        display: none;
     }
 }
